// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`error 1`] = `"Error"`;

exports[`it renders 1`] = `
<div>
  children
</div>
`;

exports[`loading 1`] = `"Loading..."`;

exports[`null 1`] = `""`;

exports[`render error 1`] = `
<div>
  Custom 
  Error
   message...
</div>
`;

exports[`render loading 1`] = `"Error"`;
